Remove overflow auto and fixed height to allow for menu to push down

--- a/public/style.css
+++ b/public/style.css
@@ -5,17 +5,10 @@ html, body {
   padding: 0px;
   background: #FFF;
 }
-#map-canvas {
-  height: 100%;
-  width: auto;
-  margin: 0px;
-}
 #menu {
   background: rgba(0, 0, 0, .5);
-  height: 60%;
   width: 100%;
-  display: none;  
-  overflow: auto;
+  display: none;
   position: relative;
   z-index: 500;
 }
